--- a/driver/ruby/client.html
+++ b/driver/ruby/client.html
@@ -67,6 +67,7 @@
 							<input type="text" class="form-control" placeholder="input" id="input"/>
 							<button class="btn btn-default" ng-click="send('EX EX EX DE JH1UMV JH1UMV JH1UMV                                            VVVVVVVVV JH1UMV')">EX</button>
 							<button class="btn btn-default" ng-click="send('QRL? ')">QRL?</button>
+							<button class="btn btn-default" ng-click="send('DE JH1UMV ')">DE</button>
 							<button class="btn btn-default" ng-click="send('CQ CQ DE JH1UMV JH1UMV PSE K ')">CQ</button>
 							<button class="btn btn-default" ng-click="send('GM UR 599 5NN BK')">599 BK</button>
 							<button class="btn btn-default" ng-click="send('73 TU E E')">73</button>
