--- a/driver/ruby/client.html
+++ b/driver/ruby/client.html
@@ -1,18 +1,21 @@
+<!--#!chrome-cli reload && echo 
+-->
 <!DOCTYPE html>
-<html ng-app="App">
+<html ng-app="App" ng-controller="MainCtrl">
 	<head>
-		<title></title>
+		<title>{{ name }}</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
 		<script type="text/javascript" src="assets/jquery-2.1.1.js"></script>
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap-theme.css">
-		<script src="assets/bootstrap/js/bootstrap.js"></script>
 		<script src="assets/angular.js"></script>
 		<script src="assets/underscore.js"></script>
 		<script src="assets/keyString.js"></script>
+		<script src="assets/ui-bootstrap-tpls-0.11.0.js"></script>
 		<script src="client.js"></script>
+		<script src="config.js"></script>
 
 		<link rev="made" href="mailto:cho45@lowreal.net"/>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
@@ -21,13 +24,9 @@
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 	</head>
-	<body ng-controller="MainCtrl">
+	<body>
 		<div class="container">
-			<div class="page-header">
-				<h1>Control Morse Device</h1>
-			</div>
-
-			<form class="form-horizontal" style="">
+			<form class="form-horizontal" style="padding: 10px">
 				<div style="float: right; width: 300px">
 					<div class="form-group form-group-sm">
 						<label class="col-sm-4 control-label">Speed</label>
@@ -38,7 +37,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="form-group form-group-sm">
+					<!-- div class="form-group form-group-sm">
 						<label class="col-sm-4 control-label">Inhibit</label>
 						<div class="col-sm-8">
 							<div class="input-group">
@@ -46,7 +45,7 @@
 								<div class="input-group-addon">msec</div>
 							</div>
 						</div>
-					</div>
+					</div -->
 					<div class="form-group form-group-sm">
 						<label class="col-sm-4 control-label">Side tone</label>
 						<div class="col-sm-8">
@@ -64,38 +63,74 @@
 				<div style="margin-right: 320px">
 					<div class="form-group">
 						<div class="col-sm-12">
-							<input type="text" class="form-control" placeholder="input" id="input"/>
-							<button class="btn btn-default" ng-click="send('EX EX EX DE JH1UMV JH1UMV JH1UMV                                            VVVVVVVVV JH1UMV')">EX</button>
-							<button class="btn btn-default" ng-click="send('QRL? ')">QRL?</button>
-							<button class="btn btn-default" ng-click="send('DE JH1UMV ')">DE</button>
-							<button class="btn btn-default" ng-click="send('CQ CQ DE JH1UMV JH1UMV PSE K ')">CQ</button>
-							<button class="btn btn-default" ng-click="send('GM UR 599 5NN BK')">599 BK</button>
-							<button class="btn btn-default" ng-click="send('73 TU E E')">73</button>
-						</div>
-						<div class="col-sm-12">
-							<pre class="form-control-static"><span class="sent">{{ sent.join('') }}</span><span class="buffer">{{ buffer }}</span><span class="queue">{{ queue }}</span></pre>
+							<pre class="form-control-static" style="margin-bottom: 10px; min-height: 3em"><span class="sent">{{ sent.join('') }}</span><span class="buffer">{{ buffer }}</span><span class="queue">{{ queue }}</span></pre>
 							<style scoped>
 								.sent {
-								font-weight: bold;
-								color: #999;
+									font-weight: bold;
+									color: #999;
 								}
 
 								.buffer {
-								font-weight: bold;
-								background: #ffff00;
-								color: #000;
+									font-weight: bold;
+									background: #ffff00;
+									color: #000;
 								}
 
 								.queue {
-								font-weight: bold;
-								color: #666;
+									font-weight: bold;
+									color: #666;
 								}
 							</style>
+						</div>
+						<div class="col-sm-12">
+							<div class="input-group">
+								<input type="text" class="form-control" placeholder="input" id="input"/>
+								<div class="input-group-addon">{{ connected ? 'Connected' : 'Disconnected' }}</div>
+							</div>
+						</div>
+						<div class="col-sm-12" style="margin: 10px 0">
+							<div ng-repeat="macro in macros" class="btn-group dropdown" style="margin: 0 5px 5px 0">
+								<button class="btn btn-default btn-xs" ng-click="send(macro.text)">{{ macro.name }}</button>
+								<button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+									<span class="caret"></span>
+									<span class="sr-only">Toggle Dropdown</span>
+								</button>
+								<ul class="dropdown-menu" role="menu">
+									<li><a ng-click="send(macro.text)">{{ macro.text }}</a></li>
+									<li class="divider"></li>
+									<li><a ng-click="edit(macro)">Edit…</a></li>
+								</ul>
+							</div>
+							<button class="btn btn-success btn-xs" ng-click="edit()">+</button>
 						</div>
 					</div>
 				</div>
 
 			</form>
+			<script type="text/ng-template" id="edit.html">
+				<div class="modal-header">
+					<h3 class="modal-title">Edit</h3>
+				</div>
+				<div class="modal-body">
+					<div class="form-group">
+						<label>
+							Name
+						</label>
+						<input type="text" class="form-control" ng-model="macro.name"/>
+					</div>
+					<div class="form-group">
+						<label>
+							Text
+						</label>
+						<input type="text" class="form-control" ng-model="macro.text"/>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-danger" ng-click="remove()" ng-show="mode == 'edit'">Remove</button>
+					<button class="btn btn-primary" ng-click="ok()">OK</button>
+					<button class="btn btn-default" ng-click="cancel()">Cancel</button>
+				</div>
+			</script>
 		</div>
 	</body>
 </html>
